--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
         </nav>
         <!-- Masthead-->
-        <header class="masthead">
+        <header class="masthead" style="background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.7) 75%, #000 110%), url('assets/img/bg_baru.png');">
                 
             <div class="container px-4 px-lg-6 d-flex h-100 align-items-center justify-content-center">
                 <div class="d-flex justify-content-center">
