--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <h2 class="text-white-50 mx-auto mt-5 mb-5">Makasih ya sudah selalu bersama aku!</h2>
                         <div class="container text-center">
                             <button id="playButton" class="btn btn-primary" href="#greting">Play Song?</button>
-                            <audio id="audioPlayer" src="assets/music/bukan-cinta-biasa.mp3" preload="auto"></audio>
+                            <audio id="audioPlayer" src="assets/music/janji-suci.mp3" preload="auto"></audio>
                         </div>
                     </div>
                 </div>
